--- a/code/index.html
+++ b/code/index.html
@@ -37,27 +37,27 @@
             <li><a href="#jump-to-featured">Featured</a></li>
             <li><a href="https://wisdomquotes.com/positive-quotes/" target="_blank">Inspiration</a></li>
             <li><a href="#jump-to-footer">Contact</a></li>
-            <a class="mobile-nav-icon"><i class="fas fa-bars"></i>
             </a>
           </ul>
         </div>
       </nav>
-      <div class="hero-container">
-        <div class="hero-text">
-          <h1>Hunting for life's silver lining</h1>
-          <h2 class="header-subtitle">One news at a time</h2>
-          <button class="cta-button main" onclick="window.location.href='#jump-to-main';">What's good
-            today?</button>
+      <section class="hero">
+        <div class="hero-container">
+          <div class="hero-text">
+            <h1>Hunting for life's silver lining</h1>
+            <h2 class="header-subtitle">One news at a time</h2>
+            <button class="cta-button main" onclick="window.location.href='#jump-to-main';">What's good
+              today?</button>
+          </div>
         </div>
-        <!--Here goes the hero slider. It contains the most important news of the week -->
-      </div>
+      </section>
     </header>
     <section class="main-news" id="jump-to-main">
-      <!--An image of the founders + some copy and cta-button -->
+      <!--News of the day + some copy and cta-button -->
       <div class="main-news-container">
         <img class="main-news-img"
           src="https://images.unsplash.com/photo-1525434280327-e525e03f17ef?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80"
-          alt="Picture of the authors" />
+          alt="Picture of a capybara" />
         <div class="main-news-contents">
           <h2>News of the Day</h2>
           <h3 class="main-subtitle">No More Capybara Hunting in Colombia</h3>
@@ -109,7 +109,7 @@
             </div>
           </article>
           <article>
-            <img class="featured-image" src="./resources/img/site-content/tanvi-sharma--4bD2p5zbdA-unsplash.jpg"
+            <img class="featured-image" src="./resources/img/site-content/nick-fewings--2lJGRIY5P0-unsplash.jpg"
               alt="Sample photo">
             <div class="featured-single">
               <h3>India vs. Plastic</h3>
@@ -177,34 +177,35 @@
       </div>
 
     </section>
+    <section class="footer" id="jump-to-footer">
+      <div class="footer-container">
+        <img class="logo-transparent" src="./resources/img/brand-assets/logo_transparent.png" alt="nuntii logo">
+        <ul class="footer-list">
+          <!--SoMe icons-->
+          <li class="footer-list-item">
+            <div class="social-icons">
+              <a class="social-icon" href="https://www.tiktok.com/" target="_blank"><i
+                  class="fab fa-tiktok tiktok"></i></a>
+              <a class="social-icon" href="https://www.instagram.com/" target="_blank"><i
+                  class="fab fa-instagram instagram"></i></a>
+              <a class="social-icon" href="https://twitter.com/" target="_blank"><i
+                  class="fab fa-twitter twitter"></i></a>
+              <a class="social-icon" href="https://www.facebook.com/" target="_blank"><i
+                  class="fab fa-facebook facebook"></i></a>
+            </div>
+          </li>
+          <!--Copyright disclaimer-->
+          <li class="footer-list-item">
+            <p><a class="author-email" href="mailto:webmaster@example.com">jane_doe@nuntii.com</a></p>
+          </li>
+          <li class="footer-list-item">
+            <p class="copyright">nuntii © 2021</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </div>
-  <section class="footer" id="jump-to-footer">
-    <div class="footer-container">
-      <img class="logo-transparent" src="./resources/img/brand-assets/logo_transparent.png" alt="nuntii logo">
-      <ul class="footer-list">
-        <!--SoMe icons-->
-        <li class="footer-list-item">
-          <div class="social-icons">
-            <a class="social-icon" href="https://www.tiktok.com/" target="_blank"><i
-                class="fab fa-tiktok tiktok"></i></a>
-            <a class="social-icon" href="https://www.instagram.com/" target="_blank"><i
-                class="fab fa-instagram instagram"></i></a>
-            <a class="social-icon" href="https://twitter.com/" target="_blank"><i
-                class="fab fa-twitter twitter"></i></a>
-            <a class="social-icon" href="https://www.facebook.com/" target="_blank"><i
-                class="fab fa-facebook facebook"></i></a>
-          </div>
-        </li>
-        <!--Copyright disclaimer-->
-        <li class="footer-list-item">
-          <p><a class="author-email" href="mailto:webmaster@example.com">jane_doe@nuntii.com</a></p>
-        </li>
-        <li class="footer-list-item">
-          <p class="copyright">nuntii © 2021</p>
-        </li>
-      </ul>
-    </div>
-  </section>
+
 </body>
 
 </html>
