Renamed classes to make the code more clear and deleted one list-item in the navbar.

--- a/code/index.html
+++ b/code/index.html
@@ -37,9 +37,6 @@
             <li class="flex-child">
               <a class="navbar" href="#">Technology</a>
             </li>
-            <li class="flex-child">
-              <a class="navbar" href="#">Union</a>
-            </li>
           </ul>
         </nav>
       </div>
@@ -48,9 +45,9 @@
     <div class="container">
 
       <!-- The big news content -->
-      <section class="hero-news">
-        <article class="hero-news-grid">
-          <div class="hero-news-image">
+      <section class="hero-section">
+        <article class="hero-article">
+          <div class="hero-image-container">
             <img class="hero-image" src="https://images.unsplash.com/photo-1583971663176-dd7180de1b76?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80" alt="women-empowerment"/>
           </div>
 
@@ -71,66 +68,66 @@
         </article>
       </section>
 
-      <!-- More news content  -->
-      <section class="grid-news">
-        <article class="news-1">
-            <img class="news-images" src="https://images.unsplash.com/photo-1564694457547-6ea79902e0be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="Pride"/>
+      <!-- More news content -->
+      <section class="small-news-section">
+        <article class="article-1">
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1564694457547-6ea79902e0be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="Pride"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           </p>
         </article>
 
-        <article class="news-2">
-            <img class="news-images" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="rainforest"/>
+        <article class="article-2">
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="rainforest"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           </p>
         </article>
 
-        <article class="news-3">
-            <img class="news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="#"/>
+        <article class="article-3">
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="#"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           </p>
         </article>
 
-        <article class="news-4">
-            <img class="news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="iceberg"/>
+        <article class="article-4">
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="iceberg"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           </p>
         </article>
 
-        <article class="news-5">
-            <img class="news-images" src="https://images.unsplash.com/photo-1533229394718-02d54f4a108e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="droner"/>
+        <article class="article-5">
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1533229394718-02d54f4a108e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="droner"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           </p>
         </article>
 
-        <article class="news-6">
-            <img class="news-images" src="https://images.unsplash.com/photo-1591189327503-5053a8aed8d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="black-lives-matter"/>
+        <article class="article-6">
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1591189327503-5053a8aed8d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="black-lives-matter"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           </p>
         </article>
 
-        <article class="news-7">
-            <img class="news-images" src="https://images.unsplash.com/photo-1496331285476-d13f7fd07d99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2467&q=80" alt="Sierra-Leones"/>
+        <article class="article-7">
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1496331285476-d13f7fd07d99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2467&q=80" alt="Sierra-Leones"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           </p>
         </article>
 
-        <article class="news-8">
-            <img class="news-images" src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="covid-19"/>
+        <article class="article-8">
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="covid-19"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
