I have updated all images - link to local folder and added the footer

--- a/code/index.html
+++ b/code/index.html
@@ -6,14 +6,15 @@
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   </head>
 
   <body>
-    
+
      <header class="header">
        <div class="logo">
         <a>
-          <img src="https://i.ibb.co/1JsJdGs/logo-size.jpg" alt="logo-sampa">
+          <img src="../logo_size.jpg" alt="logo-sampa">
         </a>
        </div>
         <nav class="navigation"> 
@@ -24,17 +25,17 @@
         </nav>
         <div class="togglebox">
           <a onclick="showMenu()" href="#">
-            <img class="menu" src="https://i.ibb.co/Kx1LfVD/menu-2.png" alt="menu-bar"><img class="close" src="https://i.ibb.co/N3P738C/cancel.png" alt="close-bar">
+            <img class="menu" src="../menu (2).png" alt="menu-bar"><img class="close" src="../cancel.png" alt="close-bar">
           </a>
         </div>
     </header>
 
     <section class="wrapper-flex-big">
       <div class="container-big">
-        <img src="https://i.ibb.co/4ShyGZL/paulista.jpg" alt="" class="big-section-img">
+        <img src="../paulista.jpg" alt="Avenida-paulista" class="big-section-img">
         <div class="conteiner-text">
           <p class="title-big-news"> São Paulo - The city that never sleeps</p>
-          <p class="text-big-news">Walking will likely be a big part of anyone's visit to Sampa (São Paulo's nickname) and visitors should take a leisurely stroll along Avenida Paulista, browse the goods and food at Mercado Municipal and enjoy Ibirapuera Park's walking paths. Don't forget to save some time to marvel at the city from a bird's-eye view (at Edifício Italia) and to immerse yourself in Brazil's favorite pastime at the Museu do Futebol.</p>
+          <p class="text-big-news">Also known as Terra da Garoa, Sampa (São Paulo's nickname) is the largest city in Brazil with 12.2 million inhabitants. It has almost everything you could want on a business or leisure trip. There are many parks around the city, as well as endless options for leisure and culture. It doesn't matter if you prefer cultural tours, museums and theaters, or if you want to do a lot of shopping and taste food from all over the world. São Paulo will not disappoint you!</p>
         </div>
       </div>
     </section>
@@ -43,37 +44,38 @@
 
     <section class="wrapper-flex">
       <div class="container">
-        <img src="https://i.ibb.co/CbQQDyN/12-02-2018-Carnaval-de-Rua-SGT-Pimenta-Centro-Rio-de-Janeiro.jpg" alt="Bloco-de-Carnaval" class="photo">
+        <img src="../Bloco_de carnaval.jpg" alt="Bloco-de-Carnaval" class="photo">
         <h2 class="title">Let's party</h2>
         <p class="description">Bloco de Carnaval de Rua -  Street Bands That Mobilize Crowds .</p>
       </div>
 
       <div class="container">
-        <img src="https://i.ibb.co/M8yWxsW/DOM.jpg" alt="DOM-restaurant" class="photo">
+        <img src="../DOM.jpg" alt="DOM-restaurant" class="photo">
         <h2 class="title">foodie</h2>
-        <p class="description">DOM Restaurant - The Best Restaurant in Town, Two Start Michelin</p>
+        <p class="description">DOM Restaurant - it is a two Star Michelin, if you are a food lover you will love this place.</p>
       </div>
 
       <div class="container">
-        <img src="https://i.ibb.co/d4Hd5dK/vila-madalena.jpg" alt="Vila-Madalena" class="photo">
+        <img src="../vila_madalena.jfif" alt="Vila-Madalena" class="photo">
         <h2 class="title">brazilian's södermalm</h2>
-        <p class="description">Vila Madalena - Best Bars in Town.</p>
+        <p class="description">Vila Madalena - has a creative atmosphere with the graffiti  around the area and lots of bars with live music.</p>
       </div>
 
       <div class="container">
-        <img src="https://i.ibb.co/3fQ3GR7/ilha-bela.png" alt="ilha-bela" alt="beach" class="photo">
+        <img src="../ilha_bela.png" alt="ilha-bela" alt="beach" class="photo">
         <h2 class="title">vitamin sea</h2>
         <p class="description">São paulo has beautiful beaches - Check it out our favorites.</p> 
       </div>
 
       <div class="container">
-        <img src="https://i.ibb.co/0yFnX1s/terra-o-it-lia.webp" alt=terraco-italia class="photo" >
+        <img src="../terraço-itália-.webp" alt=terraco-italia class="photo" >
         <h2 class="title">Drink with a view</h2>
-        <p class="description">5 Best roof top bars to go during sommer time.</p> 
+        <p class="description">Check it out, the best rooftop bars in town with breathtaking views from the city.
+        </p> 
       </div>
 
       <div class="container">
-        <img src="https://i.ibb.co/RSbwkR0/bairro-liberdade.jpg" alt="Bairro-Liberdade" class="photo">
+        <img src="../bairro_liberdade.jpg" alt="Bairro-Liberdade" class="photo">
         <h2 class="title">Who likes sushi?</h2>
         <p class="description">Bairro da Liberdade - The most traditional japonese area.</p>
       </div>
@@ -107,64 +109,69 @@
 
     <section class="wrapper-grid-pt ">
       <div class="container-pt">
-        <img class="pt-img" src="https://i.ibb.co/XF9YXZ3/conversation-1.png" alt="people-talking"> 
+        <img class="pt-img" src="../conversation (1).png" alt="people-talking"> 
         <div class="text-pt">
           <p class="description-pt">
             <strong>Legal</strong>
          </p>
          <p class="description-pt"> Literally: “Legal”</p>
-         <p class="description-pt">Legal (lay-gow) literally means “legal”, but it is used to declare all things cool or awesome. New shirt? Legal! New movie out? Legal! Got an A on the test? Legal!</p>
-         <p class="description-pt">Some other Brazilian synonyms for cool that are slightly less formal include: maneiro, da hora, top, sinistro.</p>
+         <p class="description-pt">Legal (lay-gow) literally means “legal”, but it is used to say that things are cool or awesome. Did you travel during your holidays?Legal! Some other forms to say cool that are slightly less formal: maneiro, da hora, top, sinistro.
+          </p>
       </div>
       </div>
 
       <div class="container-pt">
-        <img class="pt-img" src="https://i.ibb.co/XF9YXZ3/conversation-1.png" alt="people-talking"> 
+        <img class="pt-img" src="../conversation (1).png" alt="people-talking"> 
         <div class="text-pt">
           <p class="description-pt">
-            <strong>Legal</strong>
+            <strong>E ai?</strong>
          </p>
-         <p class="description-pt"> Literally: “Legal”</p>
-         <p class="description-pt">Legal (lay-gow) literally means “legal”, but it is used to declare all things cool or awesome. New shirt? Legal! New movie out? Legal! Got an A on the test? Legal!</p>
-         <p class="description-pt">Some other Brazilian synonyms for cool that are slightly less formal include: maneiro, da hora, top, sinistro.</p>
+         <p class="description-pt">Literally: “And there?“</p>
+         <p class="description-pt">E ai (ee-eye-ee) which means “What’s up?” It is used as a way to greet friends, often followed by a Tudo bem? or Beleza?.</p>
       </div>
       </div>
 
       <div class="container-pt">
-        <img class="pt-img" src="https://i.ibb.co/XF9YXZ3/conversation-1.png" alt="people-talking"> 
+        <img class="pt-img" src="../conversation (1).png" alt="people-talking"> 
         <div class="text-pt">
           <p class="description-pt">
-            <strong>Legal</strong>
+            <strong>Eita</strong>
          </p>
-         <p class="description-pt"> Literally: “Legal”</p>
-         <p class="description-pt">Legal (lay-gow) literally means “legal”, but it is used to declare all things cool or awesome. New shirt? Legal! New movie out? Legal! Got an A on the test? Legal!</p>
-         <p class="description-pt">Some other Brazilian synonyms for cool that are slightly less formal include: maneiro, da hora, top, sinistro.</p>
+         <p class="description-pt">Literally: No translation (sound, exclamation)</p>
+         <p class="description-pt">Eita (eh-ta) isn’t a word that you will find in textbooks, but when you’re surrounded by Brazilians, you’ll hear it all the time.  The sound expresses either fear or satisfaction, depending on the situation.</p>
       </div>
       </div>
 
       <div class="container-pt">
-        <img class="pt-img" src="https://i.ibb.co/XF9YXZ3/conversation-1.png" alt="people-talking"> 
+        <img class="pt-img" src="../conversation (1).png" alt="people-talking"> 
         <div class="text-pt">
           <p class="description-pt">
-            <strong>Legal</strong>
+            <strong>Valeu</strong>
          </p>
-         <p class="description-pt"> Literally: “Legal”</p>
-         <p class="description-pt">Legal (lay-gow) literally means “legal”, but it is used to declare all things cool or awesome. New shirt? Legal! New movie out? Legal! Got an A on the test? Legal!</p>
-         <p class="description-pt">Some other Brazilian synonyms for cool that are slightly less formal include: maneiro, da hora, top, sinistro.</p>
+         <p class="description-pt">Literally: “It was worth it.”</p>
+         <p class="description-pt">Valeu (val-ay-o) comes from the verb valer (“to be worth, value”). It is an informal way of saying obrigado/a (“thank you”). Sometimes you can hear Brazilians combining the two: Valeu, obrigado!</p>
       </div>
       </div>
 
       <div class="container-pt">
-        <img class="pt-img" src="https://i.ibb.co/XF9YXZ3/conversation-1.png" alt="people-talking"> 
+        <img class="pt-img" src="../conversation (1).png" alt="people-talking"> 
         <div class="text-pt">
           <p class="description-pt">
-            <strong>Legal</strong>
+            <strong>Beleza?</strong>
          </p>
-         <p class="description-pt"> Literally: “Legal”</p>
-         <p class="description-pt">Legal (lay-gow) literally means “legal”, but it is used to declare all things cool or awesome. New shirt? Legal! New movie out? Legal! Got an A on the test? Legal!</p>
-         <p class="description-pt">Some other Brazilian synonyms for cool that are slightly less formal include: maneiro, da hora, top, sinistro.</p>
+         <p class="description-pt"> Literally: Beauty?</p>
+         <p class="description-pt">In most of the Portuguese textbooks, we learn to greet someone in Brazil, saying Tudo bem? (“All good?”), but Brazilians are way more creative than this. So instead of asking if everything is going well, they ask if everything is beautiful.</p>
+         <p class="description-pt"> There is another expression commonly used, Tudo jóia? which literally means “All jewelry?” So next time you greet a Brazilian, ask Tudo jóia? ou Beleza? Instead of Tudo bem?</p>
       </div>
       </div>
-    </section>    
+    </section>   
+    
+    <footer class="footer">
+      <div class="logo-footer">
+        <a>
+          <img src="../logo_size_invert.jpg" alt="logo-sampa">
+        </a>
+       </div>
+    </footer>
   </body>
 </html>
