your commit message

--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,7 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-16x16.png">
 </head>
 
 <body>
@@ -51,7 +52,7 @@
           <p>2.“…Did your cat just eat my tuna sandwhich? It’s a paw-sibility.”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/thumbnail_Screenshot_20210827-115008_Gallery.jpg" alt="black and white photo of fluffy cat laying down looking at camera">
+          <img class="small-image" src="images/thumbnail_Screenshot_20210827-115008_Gallery.jpg" alt="black and white photo of fluffy cat look out the window">
           <h3><strong>A-paw-ling - Appalling</strong></h3>
           <p><strong><em>adjective</em></strong></p>
           <p>1. Causing shock or dismay for a cat; horrific.</p>
@@ -65,7 +66,7 @@
           <p>2.“The litter box smelled claw-ful after not changing it for a while.”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/thumbnail_20210826_114509.jpg" alt="black and white photo of cat sleeping">
+          <img class="small-image" src="images/thumbnail_20210826_114509.jpg" alt="black and white photo of cat looking a camera">
           <h3><strong>Fur real - For Real</strong></h3>
           <p><strong><em>informal</em></strong></p>
           <p>1. Used to assert that a cat is genuine or is actually the case.</p>
@@ -79,14 +80,14 @@
           <p>2. “As soon as the cat entered the vet, he became hiss-terical.”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/thumbnail_Screenshot_20210827-114246_Gallery.jpg" alt="black and white closeup photo of cats face from the side">
+          <img class="small-image" src="images/thumbnail_Screenshot_20210827-114246_Gallery.jpg" alt="black and white image of cat sitting up">
           <h3><strong>Meow - Now</strong></h3>
           <p><strong><em>adverb</em></strong></p>
           <p>1. At the present time or moment; made popular by the 2001 cult-film classic, Super Troopers.</p>
           <p>2. “Go refill the food bowl – right meow!”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/thumbnail_20210723_160455.jpg" alt="black and white photo of kitten sitting up">
+          <img class="small-image" src="images/thumbnail_20210723_160455.jpg" alt="black and white photo of kitten laying down">
           <h3><strong>Paw-er - Power</strong></h3>
           <p><strong><em>noun</em></strong></p>
           <p>1. The capacity or ability to direct or influence the behavior of other cats.</p>
@@ -98,7 +99,7 @@
 <footer>
   <div class="links">
     <div class="top"><a href="">To the top</a></div>
-    <img src="images/celebration.png" alt="logo of a fox who's holding maracas">
+      <img src="images/celebration.png" alt="logo of a fox who's holding maracas">
       <p><strong>Sofia Wallerberg</strong></p>
       <p>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
       <p>Stickers made by <a href="https://www.flaticon.com/authors/stickerfolio" title="stickerfolio">stickerfolio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
