made the header structure cleaner

--- a/code/index.html
+++ b/code/index.html
@@ -14,8 +14,9 @@
     <header>
       <div class="navigation-container">
         <nav class="navigation">
-          <a href="" class="navigation-logo"></a>
+          <a href="" class="navigation-logo">
             <img class="navigation-logo-img" src="the-telegraph-logo.svg" />
+          </a>
           <ul class="navigation-list">
             <li class="navigation-list-item" style="display:inline">
               <a href="" alt="1">Inrikes</a>
@@ -35,8 +36,8 @@
     </header>
 
     <section class="big-news-parent">
-      <div class="big-news-child">
-        <h4>SUBJECT</h4>
+      <div class="big-news-child blue">
+        <h4>UTRIKES</h4>
         <img class="news-img" src="https://picsum.photos/600/400" alt="random photo" />
         <h1>Ut enim ad minim veniam quis nostrud</h2>
         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -44,56 +45,55 @@
     </section>
 
     <section class="news-cards-parent">
-      <div class="news-cards-child green">
-        <h4>SUBJECT</h4>
+      <div class="news-cards-child red">
+        <h4>INRIKES</h4>
         <img class="news-img" src="https://picsum.photos/250/125" alt="random photo" />
         <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="news-cards-child red">
-        <h4>SUBJECT</h4>
+      <div class="news-cards-child blue">
+        <h4>UTRIKES</h4>
         <img class="news-img" src="https://picsum.photos/400/200" alt="random photo" />
         <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="news-cards-child blue">
-        <h4>SUBJECT</h4>
+      <div class="news-cards-child pink">
+        <h4>SPORT</h4>
         <img class="news-img" src="https://picsum.photos/500/250" alt="random photo" />
         <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child green">
-        <h4>SUBJECT</h4>
+        <h4>KULTUR</h4>
         <img class="news-img" src="https://picsum.photos/600/300" alt="random photo" />
         <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="news-cards-child red">
-        <h4>SUBJECT</h4>
+      <div class="news-cards-child blue">
+        <h4>UTRIKES</h4>
         <img class="news-img" src="https://picsum.photos/450/225" alt="random photo" />
         <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="news-cards-child orange">
-        <h4>SUBJECT</h4>
+      <div class="news-cards-child pink">
+        <h4>SPORT</h4>
         <img class="news-img" src="https://picsum.photos/350/175" alt="random photo" />
         <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child green">
-        <h4>SUBJECT</h4>
+        <h4>KULTUR</h4>
         <img class="news-img" src="https://picsum.photos/480/240" alt="random photo" />
         <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="news-cards-child pink">
-        <h4>SUBJECT</h4>
+      <div class="news-cards-child red">
+        <h4>INRIKES</h4>
         <img class="news-img" src="https://picsum.photos/460/230" alt="random photo" />
         <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       
-
     </section>
     
     <footer>
