Made so that the header changes depending on device, started adding animation to nav/header

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="hero">
       <!-- Some kind of logo and navbar -->
       <nav class="navigation">
-        <img class="logo" src="https://cdn.pixabay.com/photo/2015/09/09/17/06/jellyfish-931886_960_720.jpg" alt="Jellyfish logo">
-        <h1>Ocean news</h1>
-        <ul class="top-bar">
-        <li> <a class="top-link" href="#big-news-link">Big news</a> </li> 
-        <li> <a class="top-link" href="#other-news-link">Other news</a> </li> 
-        <li> <a class="top-link" href="#">About</a> </li> 
-        <li> <a class="top-link" href="#">Contact</a> </li> 
-      </ul>
+      <img class="logo" src="https://cdn.pixabay.com/photo/2015/09/09/17/06/jellyfish-931886_960_720.jpg" alt="Jellyfish logo">
+        <h1>Ocean news</h1>  
+        <div>
+        <a class="link" href="#big-news-link">Big news</a>
+        <a class="link" href="#other-news-link">Other news</a>
+        <a class="link" href="#">About</a>
+        <a class="link" href="#">Contact</a>
+      </div>      
       </nav>
     </header>
 
@@ -88,7 +88,7 @@
     </section>
 
     <footer>
-      <p class="p-footer"><a href="index.html">Ocean News</a> | Skapad av Linnéa Wilhelmsson 🐘 </p>
+      <p><a class="link" href="index.html">Ocean News</a> | Skapad av Linnéa Wilhelmsson 🐘 </p>
   </footer>
 
   </body>
