added hover font-size menu hover flip picture desktop view

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
     <div class="container.grid"> 
       <div class= "title"><h1> artsy news </h1></div>
       <div class="cell"></div>
-      <div class= "meny"> <p><a href="default.asp">ABOUT ARCHIVE GALLERY</a></p> </div>
+    <div class= "meny"> <p><a class="ex1"href="default.asp">ABOUT ARCHIVE GALLERY</a></p> </div>
       </div>
 
       
@@ -30,7 +30,7 @@
         
       <div class="second-container grid"> 
       <div class="img.text">
-        <div class="news-img"> <img src=img.1.jpeg alt="OliEpp"> </div> 
+        <div class="news-img"> <img class="img.news" src=img.1.jpeg alt="OliEpp"> </div> 
       <div class="undertitle"> <p>Oli Epp, Mondrian Dress, 2021, acrylic and oil on canvas, 78.7 × 70.8 in. (200 × 180 cm)</p></div>
     </div>
       <div class="stockholmsyndrome"><h2>Stockholm Syndrome</h2><p>Carl Kostyál opened his second exhibition “Stockholm Syndrome” at Hospitalet in Stockholm this Monday. After the succé show “Stockholm Sessions” (07.05.2021 - 30.05.2021) which included pieces by varios modern artist, they chose tho concent on only two artists this time Oli Epp and Ry David Bradley.   
