Added a favicon, updated the text in the readme, changed and moved some of the pictures.

--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <link rel="stylesheet" href="./style.css"/>
 
     <!-- Font Awesome -->
@@ -62,7 +68,7 @@
             </p>
             <h1 class="hero-headline-3">This is also a headline</h1>
             <p class="hero-paragraph-3">
-              Rhoncus dolor purus non enim praesent elementum facilisis leo. Nisi est sit amet facilisis. Elementum nibh tellus molestie nunc.
+              Rhoncus dolor purus non enim praesent elementum facilisis leo. Nisi est sit amet facilisis. Elementum nibh tellus molestie.
             </p>
           </div>
         </article>
@@ -71,7 +77,7 @@
       <!-- More news content -->
       <section class="small-news-section">
         <article class="article-1">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1564694457547-6ea79902e0be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="Pride"/>
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1564694457547-6ea79902e0be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="pride"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -87,7 +93,7 @@
         </article>
 
         <article class="article-3">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="#"/>
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="covid-19"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -95,7 +101,7 @@
         </article>
 
         <article class="article-4">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="iceberg"/>
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="polar-bear"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -127,7 +133,7 @@
         </article>
 
         <article class="article-8">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="covid-19"/>
+          <img class="small-news-images" src="https://images.unsplash.com/photo-1608387371413-f2566ac510e0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" alt="plant-building"/>
           <h2>This is a headline</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
